--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -72,8 +72,9 @@
                         <div style="display:none">
                           {{subplan.plan | showplan}}
                         </div>
-                        <h4 ng-show="{{subplan.status}}">Plan already taken.</h4>
-                        <a ng-hide="{{subplan.status}}" class="white btn btn-primary text-uppercase" ng-click="cartAdd(subplan.id)">take this plan</a>
+
+                        <a ng-hide="planInCart(subplan.id)" class="white btn btn-primary text-uppercase" ng-click="cartAdd(subplan.id)">take this plan</a>
+                        <a ng-show="planInCart(subplan.id)" disabled class="white btn btn-primary text-uppercase">Plan in your cart</a>
                         <!-- <p ng-if="$index==0">Silver plan rates are only applicable for online consulation.</p> -->
                       </div>
                     </div>
