--- a/views/content/careers.html
+++ b/views/content/careers.html
@@ -61,7 +61,7 @@
         </div>
       </form>
       <div class="">
-        <h3 class="block brand-brown-dark">Welcome To The Selfcare Team.</h3>
+        <h3 class="m-clear brand-brown-dark text-center">Welcome To The Selfcare Team.</h3>
       </div>
     </div>
   </div>
