changes for the cart value

--- a/views/content/cart.html
+++ b/views/content/cart.html
@@ -5,7 +5,7 @@
       <h2 class="text-uppercase letter-space white font-semibold">my cart</h2>
     </div>
   </div>
-
+<!-- {{allcart}} -->
   <div class="cart-main">
     <div class="container">
       <div class="alert-postion">
