--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -343,10 +343,10 @@
                     </label>
                     <button class="btn btn-primary apply">APPLY</button>
                   </form>
-                  <div class="checkbox">
+                  <!-- <div class="checkbox">
                     <input type="checkbox" ng-model="cod" ng-change="codChange(cod)" id="cod">
                     <label for="cod" class="cod"> <span></span> COD (Cash on Delivery)</label>
-                  </div>
+                  </div> -->
                   <!-- <label>
                     <input type="checkbox" ng-model="cod" ng-change="codChange(cod)"> COD (Cash on Delivery)
                   </label> -->
