--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2028,7 +2028,7 @@ footer {
   padding: 80px;
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: 100% 100%;
+  background-size: cover;
   p {
     font-size: 16px;
   }
@@ -2584,7 +2584,7 @@ footer {
   }
   .tina {
     background-image: url(../img/consulting/tina.jpg);
-    background-size: 100% 100%;
+    background-size: cover;
   }
   .left-pattern {
     background-image: url(../img/consulting/left-pattern.jpg);
