changes for the checkout page button

--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -480,7 +480,7 @@
                     <td>
                       <input type="text" name="delivery_city" style="border: none; width: 100%;" ng-model="checkout.shippingcity" value="asdf" />
                     </td>
-                    ShippingForm</tr>
+                    </tr>
                   <tr>
                     <td>Shipping State :</td>
                     <td>
@@ -514,7 +514,7 @@
                   <tr>
                     <td></td>
                     <td>
-                      <button class="btn btn-danger m-30 con-btn" type="submit">Place order</button>
+                      <button class="btn btn-primary text-uppercase " type="submit">Place order</button>
                     </td>
                   </tr>
                 </table>
