--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -55,7 +55,7 @@
               <div class="product-buttons">
                 <a class="btn btn-primary text-uppercase" ng-click="cartAdd(product.product.id)">
                   Add to cart</a>
-                <a ui-sref="home" class="btn btn-primary text-uppercase">Continue Shopping</a>
+                <!-- <a ui-sref="home" class="btn btn-primary text-uppercase">Continue Shopping</a> -->
               </div>
             </div>
           </div>
