--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1610,6 +1610,7 @@ button {
     color: $brand-brown-dark;
     font-size: 18px;
   }
+  .place-order-btn { margin: 40px 0 20px; }
 }
 ///end checkout//
 ///////////////
