--- a/views/content/cart.html
+++ b/views/content/cart.html
@@ -81,8 +81,8 @@
         <div class="shipping">
           <div class="row">
             <div class="col-md-6">
-              <p class="brand-primary letter-space">Free shipping in Mumbai and Kolkata and India,</p>
-              <p class="brand-primary letter-space">Shipping Charges applicable<sup>*</sup> for all other cities and countries.</p>
+              <p class="brand-primary letter-space">Free shipping in Mumbai and Kolkata,</p>
+              <p class="brand-primary letter-space">Standard shipping rates apply across other cities in India.</p>
             </div>
             <div class="col-md-6">
               <div class="text-right cart-btn">
