changes for the image on product page

--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -1,6 +1,6 @@
 <section>
   <div class="selfcare-image">
-    <img src="img/apple.jpg" alt="">
+    <img ng-src="{{product.product.bannerimg|serverimage}}" alt="">
   </div>
 
   <div class="container">
