--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -1,6 +1,6 @@
 <section>
-  <div class="selfcare-image">
-    <img ng-src="{{product.product.bannerimg|serverimage}}" alt="">
+  <div class="selfcare-image product-detail-banner relate">
+    <img ng-src="{{product.product.bannerimg|serverimage}}" alt="" class="img-responsive get-center">
   </div>
 
   <div class="container">
