--- a/sass/_mobile_harsh.scss
+++ b/sass/_mobile_harsh.scss
@@ -23,6 +23,9 @@
    span { font-size: 25px; }
 }
 .user-login { width: 100px; }
+
+// product-detail
+.product-detail-banner { height: 340px; }
 }
 @media (max-width: $screen-md-max) {
 
@@ -224,6 +227,9 @@
   .get-inblog { @include margin(0 0 50px 0); }
 
   // blogdetail
+
+  // product-detail
+  .product-detail-banner { height: 200px; }
 
 }
 @media (max-width: $screen-xs-max) {
@@ -467,6 +473,9 @@
     transform: translateX(-50%);
     text-align: center;
   }
+
+  // product-detail
+  .product-detail-banner { height: 140px; }
 }
 @media (max-width: 480px) {
   .various .circle { width: 10%; }
@@ -588,5 +597,8 @@
       h5 { display: inline-block; }
     }
   }
+
+  // product-detail
+  .product-detail-banner { height: 100px; }
 
 }
