--- a/views/content/team.html
+++ b/views/content/team.html
@@ -374,6 +374,6 @@
   </div>
 
   <div class="join-team text-center">
-    <a href="" class="btn btn-primary text-uppercase font-semibold letter-space">Join our team</a>
+    <a ui-sref="careers" class="btn btn-primary text-uppercase font-semibold letter-space">Join our team</a>
   </div>
 </section>
