--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -32,38 +32,38 @@
               <br>
               <span>f: <a href="tel:02261312200">022 61312200</a></span>
               <br>
-              <a href="https://goo.gl/maps/PpeZsiFg5po" target="_blank" class="text-uppercase brand-teal">View Map</a>
+              <a href="https://goo.gl/maps/PpeZsiFg5po" target="_blank" class="text-uppercase brand-teal">View On Map</a>
             </div>
 
             <div class="santacruz">
-              <p class="brand-primary font-semibold">Santacruz</p>
+              <p class="brand-primary font-semibold">Juhu</p>
               <span>1st floor, Sanghvi Udayan, V L Mehta</span>
               <br>
               <span>Marg, JVPD scheme, Vile Parle</span>
               <br>
-              <span>West, Mumbai-400049.</span>
-              <br>
               <span>Landmark opposite 'Jalsa'</span>
+              <br>
+              <span>West, Mumbai-400049.</span>
               <br>
               <span>t: <a href="tel:9819725206">9819725206</a>, <a href="tel:+912226142435">+91 22-26142435</a>,<br><a href="tel:+912226109432" class="san-num">+91 22-26109432</a></span>
               <br>
-              <a href="https://goo.gl/maps/bDhwG4GYpcB2" target="_blank" class="text-uppercase brand-teal">View Map</a>
+              <a href="https://goo.gl/maps/bDhwG4GYpcB2" target="_blank" class="text-uppercase brand-teal">View On Map</a>
             </div>
           </div>
 
           <div class="kolkata">
             <h4 class="text-uppercase brand-brown-dark font-semibold">Kolkata</h4>
-            <span>Ground floor, 3 Cooper street,</span>
+            <span>3, Cooper street, Off AJC Bose Road,</span>
             <br>
-            <span>Lane opposite Pulse diagnostics,</span>
+            <span>Landmark - lane opp. Pulse Diagnostics near</span>
             <br>
-            <span>Next to Landsome market</span>
+            <span>Lansdowne - Hazra crossing,</span>
             <br>
             <span>Kolkata - 7000206</span>
             <br>
-            <span>t: <a href="tel:9339564578">9339564578</a></span>
+            <span>t: <a href="tel:03340708154">033-40708154</a> , <a href="tel: 03364571113"> 033-64571113</a></span>
             <br>
-            <a href="https://goo.gl/maps/9qVRT1q4XyG2" target="_blank" class="text-uppercase brand-teal">View Map</a>
+            <a href="https://goo.gl/maps/9qVRT1q4XyG2" target="_blank" class="text-uppercase brand-teal">View On Map</a>
           </div>
         </div>
 
