changes for blog on home page

--- a/views/content/home.html
+++ b/views/content/home.html
@@ -216,7 +216,7 @@
           </div>
 
           <div class="text-right btn-center">
-            <button class="text-uppercase btn btn-primary" type="button">Coming Soon</button>
+            <a ui-sref="blog" class="text-uppercase btn btn-primary"  type="button">Know more</a>
           </div>
         </div>
       </div>
