--- a/views/content/home.html
+++ b/views/content/home.html
@@ -200,7 +200,7 @@
             <h4 class="text-bold font-semibold">BLOG</h4>
           </div>
 
-          <div class="blog-info" ng-repeat="blog in blogs">
+          <div class="blog-info" ng-repeat="blog in blogs" ui-sref="blogdetail({id:blog.id})">
             <div class="row">
               <div class="col-md-4 col-sm-4 ">
                 <div class="blog-imgholder">
